<resources>
    <string name="app_name">Lesson1</string>
    <string name="mainTitle">Lesson1</string>
    <string name="btnGoToFirst">Go to the first exercise</string>
    <string name="btnGoToSecond">Go to the second exercise</string>
    <string name="btnGoToThird">Go to the third exercise</string>
    <string name="btnShowMonth">Show month</string>

    <!-- Exercise 1 -->
        <string name="hintNumberMonth">Enter number month</string>
        <!-- Error messages -->
        <string name="txtValidMonthNumber">Enter a number between 1 and 12.</string>
        <string name="txtValidNumber">Enter a valid number.</string>

        <!-- Months -->
        <string-array name="monthArray">
            <item>January</item>
            <item>February</item>
            <item>March</item>
            <item>April</item>
            <item>May</item>
            <item>June</item>
            <item>July</item>
            <item>August</item>
            <item>September</item>
            <item>October</item>
            <item>November</item>
            <item>December</item>
        </string-array>

    <!-- Exercise 2 -->
        <string name="firstNumber">First number</string>
        <string name="secondNumber">Second number</string>
        <string name="operator">Operator</string>
        <string name="result">Result</string>
        <string name="calculate">Calculate</string>
        <!-- Error messages -->
        <string name="txtValidOperator">Enter a valid operator.</string>

    <!-- Exercise 3 -->
    <string name="showLine">Show Lines</string>
    <string name="lines">Lines</string>
    <string name="numberOfLines">Number of Lines:</string>
</resources>
