<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.jmachahuay.lesson1.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/mainTitle" />

    <Button
        android:id="@+id/btnGoToFirstExercise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnGoToFirst"/>

    <Button
        android:id="@+id/btnGoToSecondExercise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnGoToSecond"/>

    <Button
        android:id="@+id/btnGoToThirdExercise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnGoToThird"/>
</LinearLayout>
