<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_exercise2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.jmachahuay.lesson1.Exercise2Activity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:layout_weight="1"
            android:inputType="number"
            android:textSize="@dimen/label_text_min_size"
            android:hint="@string/firstNumber"
            android:id="@+id/edtFirstNumber"
            android:layout_marginEnd="@dimen/margin_right"
            android:layout_marginRight="@dimen/margin_right" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/label_text_min_size"
            android:hint="@string/operator"
            android:layout_marginEnd="@dimen/margin_right"
            android:layout_marginRight="@dimen/margin_right"
            android:id="@+id/edtOperator"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:textSize="@dimen/label_text_min_size"
            android:hint="@string/secondNumber"
            android:id="@+id/edtSecondNumber"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:id="@+id/txtResult"
        android:layout_marginTop="@dimen/label_result_margin_top"
        android:layout_marginBottom="@dimen/label_result_margin_top" />

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate"/>
</LinearLayout>
